--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Deploy your TamilMV Magnet Bot easily with this detailed guide for Render and Koyeb.">
-<meta name="keywords" content="TamilMV, Telegram Bot, Magnet Link Bot, Docker, Render, Koyeb, Deployment Guide">
-<meta name="author" content="WOODcraft Team">
+  <meta name="keywords" content="TamilMV, Telegram Bot, Magnet Link Bot, Docker, Render, Koyeb, Deployment Guide">
+  <meta name="author" content="WOODcraft Team">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>TamilMV Magnet Bot Deployment Guide</title>
   <style>
@@ -119,8 +120,7 @@ TAMILMV_URL=https://www.1tamilmv.fi
           <ul>
             <li>Name: your-bot-name</li>
             <li>Region: Singapore</li>
-            <li>Branch: main</li>
-            <li>Runtime: Docker</li>
+            <li>Runtime: Docker Image Url</li>
             <li>Plan: Free</li>
           </ul>
         </li>
