--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
       border-radius: 8px;
       cursor: pointer;
     }
+    img {
+    border-radius: 8px;
+    }
   </style>
 </head>
 <body>
@@ -206,6 +209,22 @@ TAMILMV_URL=https://www.1tamilmv.fi
     </div>
 
   </div>
+
+  <div style="margin-top: 30px;">
+  <h3>Deployment Screenshots:</h3>
+
+  <div style="border: 2px solid #ccc; padding: 10px; margin-bottom: 20px; text-align: center;">
+    <img src="https://graph.org/file/120e174a9161afae40914.jpg" alt="Screenshot 1" style="max-width: 100%; border: 1px solid #999;">
+  </div>
+
+  <div style="border: 2px solid #ccc; padding: 10px; margin-bottom: 20px; text-align: center;">
+    <img src="https://graph.org/file/346465c28845c23bf8126.jpg" alt="Screenshot 2" style="max-width: 100%; border: 1px solid #999;">
+  </div>
+
+  <div style="border: 2px solid #ccc; padding: 10px; margin-bottom: 20px; text-align: center;">
+    <img src="https://graph.org/file/f3fbe69621b59e0ad4565.jpg" alt="Screenshot 3" style="max-width: 100%; border: 1px solid #999;">
+  </div>
+</div>
   <script>
 function copyToClipboard(elementId) {
   const text = document.getElementById(elementId).innerText;
