--- a/index.html
+++ b/index.html
@@ -225,6 +225,10 @@ TAMILMV_URL=https://www.1tamilmv.fi
     <img src="https://graph.org/file/f3fbe69621b59e0ad4565.jpg" alt="Screenshot 3" style="max-width: 100%; border: 1px solid #999;">
   </div>
 </div>
+  <div class="footer">
+      <strong>👨‍💻 Developer:</strong> 𝐖𝐎𝐎𝐃𝐜𝐫𝐚𝐟𝐭<br>
+      <strong>🆔 Telegram 🆔:</strong> <a href="https://t.me/Farooq_is_king" style="color:#00e5ff;">𝐖𝐎𝐎𝐃𝐜𝐫𝐚𝐟𝐭</a><br>
+    </div>
   <script>
 function copyToClipboard(elementId) {
   const text = document.getElementById(elementId).innerText;
