--- a/index.html
+++ b/index.html
@@ -218,12 +218,17 @@ TAMILMV_URL=https://www.1tamilmv.fi
   </div>
 
   <div style="border: 2px solid #ccc; padding: 10px; margin-bottom: 20px; text-align: center;">
-    <img src="https://graph.org/file/346465c28845c23bf8126.jpg" alt="Screenshot 2" style="max-width: 100%; border: 1px solid #999;">
+    <img src="https://i.ibb.co/j9n6nZxD/Op-log.png" alt="Screenshot 2" style="max-width: 100%; border: 1px solid #999;">
   </div>
 
   <div style="border: 2px solid #ccc; padding: 10px; margin-bottom: 20px; text-align: center;">
-    <img src="https://graph.org/file/f3fbe69621b59e0ad4565.jpg" alt="Screenshot 3" style="max-width: 100%; border: 1px solid #999;">
+    <img src="https://i.ibb.co/WW8C1XLL/dockerfile.png" alt="Screenshot 3" style="max-width: 100%; border: 1px solid #999;">
   </div>
+
+  <div style="border: 2px solid #ccc; padding: 10px; margin-bottom: 20px; text-align: center;">
+    <img src="https://graph.org/file/4e8a1172e8ba4b7a0bdfa.jpg" alt="Screenshot 3" style="max-width: 100%; border: 1px solid #999;">
+  </div>
+    
 </div>
   <div class="footer">
       <strong>👨‍💻 Developer:</strong> 𝐖𝐎𝐎𝐃𝐜𝐫𝐚𝐟𝐭<br>
