--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ TAMILMV_URL=https://www.1tamilmv.fi
           <ul>
             <li>Name: your-bot-name</li>
             <li>Region: Singapore</li>
-            <li>Runtime: Docker Image Url</li>
+            <li>Select option: Existing image</li>
             <li>Plan: Free</li>
           </ul>
         </li>
@@ -134,7 +134,7 @@ TAMILMV_URL=https://www.1tamilmv.fi
       <h3>2️⃣ Koyeb (Alternative)</h3>
       <ol>
         <li>Sign up at <a href="https://www.koyeb.com/" target="_blank">Koyeb</a></li>
-        <li>Create App → "Deploy from Docker"</li>
+        <li>Create App → "Deploy from Existing image"</li>
         <li>Use image: <code id="dockerImage">docker.io/woodcraftbot/1tamilmv-bot:latest</code>
           <button onclick="copyDockerImage()" style="margin-left: 10px;">Copy</button>
         </li>
