--- a/index.html
+++ b/index.html
@@ -211,10 +211,18 @@ TAMILMV_URL=https://www.1tamilmv.fi
   </div>
 
   <div style="margin-top: 30px;">
-  <h3>Deployment Screenshots:</h3>
+  <h3>Simple Deployment Screenshots:</h3>
 
   <div style="border: 2px solid #ccc; padding: 10px; margin-bottom: 20px; text-align: center;">
-    <img src="https://graph.org/file/120e174a9161afae40914.jpg" alt="Screenshot 1" style="max-width: 100%; border: 1px solid #999;">
+    <img src="https://i.ibb.co/HpDB3Qm2/Number1.jpg" alt="Screenshot 1" style="max-width: 100%; border: 1px solid #999;">
+  </div>
+
+  <div style="border: 2px solid #ccc; padding: 10px; margin-bottom: 20px; text-align: center;">
+    <img src="https://i.ibb.co/bjppc6j5/Number2.jpg" alt="Screenshot 1" style="max-width: 100%; border: 1px solid #999;">
+  </div>
+
+  <div style="border: 2px solid #ccc; padding: 10px; margin-bottom: 20px; text-align: center;">
+    <img src="https://i.ibb.co/Nn7YxHgL/Number3.jpg" alt="Screenshot 1" style="max-width: 100%; border: 1px solid #999;">
   </div>
 
   <div style="border: 2px solid #ccc; padding: 10px; margin-bottom: 20px; text-align: center;">
