--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@ TOKEN=600009999:AAHpBhz5ot-yyy66
 CHANNEL_ID=-10044009977
 CHANNEL_USERNAME=Tamilmv_Magnet_Link
 WEBHOOK_URL=https://your-website.app
-TAMILMV_URL=https://www.1tamilmv.fi
-  </code>
+TAMILMV_URL=https://www.1tamilmv.fi</code>
   <button onclick="copyToClipboard('envVars')" style="position:absolute; top:8px; right:8px; background:#2196F3; color:white; border:none; padding:5px 10px; border-radius:4px; cursor:pointer;">Copy</button>
   </pre>
     </div>
